assets/index.css
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: "Comic Book";
  src: url("comic_book/ComicBook.otf");
}
@font-face {
  font-family: "Comic Book Bold";
  src: url("comic_book/ComicBookBold.otf")
}

body {
  background-color: rgb(222, 0, 0);
}

.top {
  color: white;
  font-family: 'Comic Book Bold';
  font-size: 46px;
  margin: 1rem auto 0 auto;
  text-align: center;
  -webkit-text-stroke: 3px black;
}

h2 {
  color: white;
  font-family: 'Comic Book Bold';
  margin-top: 0;
  text-align: center;
  -webkit-text-stroke: 2px black;
}

input.red {
  background-color: red;
  border-style: ridge;
  font-size: 14px;
  padding: .5rem;
  text-align: center;
  width: 16%;
}

form {
  display: flex;
  justify-content: center;
  padding-bottom: 1rem;
}

input {
  margin-left: .5rem;
  margin-right: .5rem;
}

::-webkit-input-placeholder {
  color: black;
  font-weight: bold;
}

.red:focus {
  background-color: #2c2cff;
  outline: none;
}

.hover {
  background: red;
  border-style: ridge;
  outline: none;
}

.hover:hover {
  background: #2c2cff;
  cursor: pointer;
}

.cp-spinner {
  display: flex;
  margin: 5rem auto;
}

div.group {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  font-family: 'Comic Book Bold';
  justify-content: space-around;
  margin: 0 1rem;;
}

img.found {
  border-radius: 100%;
}

img.not-found {
  border-radius: 15px;
  height: 275px;
  width: 255px;
}

div.imgbox {
  align-items: flex-end;
  background-color: black;
  border-radius: 15px;
  display: flex;
  height: 275px;
  justify-content: center;
  margin-bottom: 1rem;
  margin-top: 1rem;
  width: 255px;;
}

div.imgbox,
div.imgbox-unfound {
  cursor: alias;
}

div.imgbox h1 {
  align-self: flex-start;
  color: white;
  font-size: large;
  margin: 0;
  position: absolute;
  -webkit-text-stroke: 1px black;
}

div.imgbox-unfound {
  align-items: center;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

div.imgbox-unfound h1 {
  align-self: flex-start;
  color: white;
  font-size: large;
  margin: 0;
  position: absolute;
  -webkit-text-stroke: 1px black;
}

h5 {
  font-family: 'Comic Book';
  margin-left: 1rem;
}

label {
  left: -999999px;
  position: absolute;
  top: -999999px;
}

@media (max-width: 925px) {
  form {
    align-items: center;
    flex-direction: column;
  }
  input,
  input.red {
    margin-bottom: .2rem;
    margin-top: .2rem;
    width: 50%;
  }
}

